# mcp-clickhouse

./: Dockerfile  pyproject.toml
.github/workflows/: docker-build.yml
mcp_clickhouse/: mcp_env.py  mcp_server.py
